update email templates

--- a/backend/TuneSpace.Infrastructure/Email/Templates/EmailConfirmationTemplate.html
+++ b/backend/TuneSpace.Infrastructure/Email/Templates/EmailConfirmationTemplate.html
@@ -51,20 +51,20 @@
         <div class="logo">TuneSpace</div>
       </div>
       <div class="content">
-        <h2>Welcome to TuneSpace, {username}!</h2>
+        <h2>Welcome to TuneSpace, {Username}!</h2>
         <p>
           Thank you for signing up. To complete your registration and start
           discovering amazing music, please confirm your email address by
           clicking the button below:
         </p>
-        <a href="{confirmationUrl}" class="button">Confirm Email Address</a>
+        <a href="{ConfirmationUrl}" class="button">Confirm Email Address</a>
         <p>
           If you didn't create this account, you can safely ignore this email.
         </p>
         <p>This link will expire in 24 hours for security reasons.</p>
       </div>
       <div class="footer">
-        <p>© {year} TuneSpace. All rights reserved.</p>
+        <p>© {Year} TuneSpace. All rights reserved.</p>
       </div>
     </div>
   </body>
