--- a/backend/TuneSpace.Infrastructure/Email/Templates/PasswordResetTemplate.html
+++ b/backend/TuneSpace.Infrastructure/Email/Templates/PasswordResetTemplate.html
@@ -52,12 +52,12 @@
       </div>
       <div class="content">
         <h2>Password Reset Request</h2>
-        <p>Hello {username},</p>
+        <p>Hello {Username},</p>
         <p>
           We received a request to reset your password for your TuneSpace
           account. Click the button below to reset your password:
         </p>
-        <a href="{resetUrl}" class="button">Reset Password</a>
+        <a href="{ResetUrl}" class="button">Reset Password</a>
         <p>
           If you didn't request a password reset, you can safely ignore this
           email.
@@ -65,7 +65,7 @@
         <p>This link will expire in 1 hour for security reasons.</p>
       </div>
       <div class="footer">
-        <p>© {year} TuneSpace. All rights reserved.</p>
+        <p>© {Year} TuneSpace. All rights reserved.</p>
       </div>
     </div>
   </body>
