--- a/backend/TuneSpace.Infrastructure/Email/Templates/WelcomeTemplate.html
+++ b/backend/TuneSpace.Infrastructure/Email/Templates/WelcomeTemplate.html
@@ -42,7 +42,7 @@
         <div class="logo">TuneSpace</div>
       </div>
       <div class="content">
-        <h2>🎵 Welcome to TuneSpace, {username}! 🎵</h2>
+        <h2>🎵 Welcome to TuneSpace, {Username}! 🎵</h2>
         <p>Your email has been confirmed and your account is now active!</p>
         <p>
           You're all set to start your musical journey. Discover new artists,
@@ -51,7 +51,7 @@
         <p>Start exploring and enjoy the music!</p>
       </div>
       <div class="footer">
-        <p>© {year} TuneSpace. All rights reserved.</p>
+        <p>© {Year} TuneSpace. All rights reserved.</p>
       </div>
     </div>
   </body>
