--- a/backend/TuneSpace.Infrastructure/Email/Templates/EmailChangeConfirmationTemplate.html
+++ b/backend/TuneSpace.Infrastructure/Email/Templates/EmailChangeConfirmationTemplate.html
@@ -51,20 +51,20 @@
         <div class="logo">TuneSpace</div>
       </div>
       <div class="content">
-        <h2>Hello {username},</h2>
+        <h2>Hello {Username},</h2>
         <p>
           You requested to change your email address to
-          <strong>{newEmail}</strong>. To confirm this change, please click the
+          <strong>{NewEmail}</strong>. To confirm this change, please click the
           button below:
         </p>
-        <a href="{confirmationUrl}" class="button">Confirm New Email Address</a>
+        <a href="{ConfirmationUrl}" class="button">Confirm New Email Address</a>
         <p>
           If you didn't request this change, you can safely ignore this email.
         </p>
         <p>This link will expire in 24 hours for security reasons.</p>
       </div>
       <div class="footer">
-        <p>© {year} TuneSpace. All rights reserved.</p>
+        <p>© {Year} TuneSpace. All rights reserved.</p>
       </div>
     </div>
   </body>
